--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello React</title>
+    <title>Chatty</title>
 </head>
 <body>
+  <nav class="navbar">
+  </nav>
   <div id="react-root"></div>
   <script src="/build/bundle.js"></script>
 </body>
